--- a/app/src/main/res/layout/gym_back_egykezesevezes.xml
+++ b/app/src/main/res/layout/gym_back_egykezesevezes.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Egyik kezedben fogd meg egy súlyzót. Helyezd a padra a másik kezed és a térded, hogy megtámasztd magad.
 \n\n2. Kilégzés közben lassan húzd felfelé a súlyzót. A gyakorlatot behajlított könyökkel kell végezni.
 \n\n3. Lassan engedd vissza a kiindulási helyzetbe.
