--- a/app/src/main/res/layout/gym_back_kabelesevezes.xml
+++ b/app/src/main/res/layout/gym_back_kabelesevezes.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Foglalj helyet a gépen úgy, hogy a lábad a tartókon legyen, és vállszélességnél kicsit szélesebben legyenek.
 \n\n2. Hajolj kicsit előre, a hátad felső részét domborítva, majd fogd meg a fogantyút és húzd közvetlenül a köldököd fölé.
 \n\n3. Lassan engedd vissza a kiindulási helyzetbe.
