--- a/app/src/main/res/layout/gym_biceps_kalapacs.xml
+++ b/app/src/main/res/layout/gym_biceps_kalapacs.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Állj egyenes háttal, kis terpeszben, lábaid körülbelül vállszélességben legyenek egymástól. Tartsd a súlyzókat magad mellett leengedve, kinyújtott karral, tenyereid nézzenek a teseted felé. Vállaidat húzd hátra.
 \n\n2. Kilégzés közben hajlítsd be az egyik kezed a vállad felé, majd a mozdulat végén tartsd meg kicsit. Ezután lassan engedd vissza a kiindulási helyzetbe és közben halítsd a másik kezedet a vállad felé.
 \n\n3. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
