--- a/app/src/main/res/layout/gym_biceps_ketkezes.xml
+++ b/app/src/main/res/layout/gym_biceps_ketkezes.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Állj egyenes háttal, kis terpeszben, lábaid körülbelül vállszélességben legyenek egymástól. Tartsd a súlyzót magad előtt leengedve, kinyújtott karral. Vállaidat húzd hátra.
 \n\n2. Hajlítsd a kezed a mellkasod felé. A mozdulat végén tartsd meg kicsit, majd lassan engedd vissza a kiindulási helyzetbe.
 \n\n3. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
