--- a/app/src/main/res/layout/gym_biceps_koncentralt.xml
+++ b/app/src/main/res/layout/gym_biceps_koncentralt.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. A gyakorlatot ülve kell végezni. A kezed támaszd neki a combod belső felének.
 \n\n2. Kilégzés közben hajlítsd a kezed a mellkasod felé, majd a mozdulat végén tartsd meg kicsit. Ezután lassan engedd vissza a kiindulási helyzetbe. Figyelj arra, hogy a felkar ne mozogjon végig támaszkodjon a combodhoz.
 \n\n3. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
