--- a/app/src/main/res/layout/gym_chest_fekvenyomas.xml
+++ b/app/src/main/res/layout/gym_chest_fekvenyomas.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Feküdj hanyatt egy egyenes padra, úgy hogy a lábaid legyenek stabilan a talajon.
 \n\n2. Emeld le a súlyzót az állványról, majd enged le a rudat a mellkashoz, úgy hogy a könyökök körülbelül 45 fokkal oldalra hajoljanak a testedtől.
 \n\n3. Miközben engedjük lefelé a súlyzókat a mellkasunkhoz szívjuk be a levegőt, majd kilégzés közben nyomjuk fel a súlyzót.
