--- a/app/src/main/res/layout/gym_guggolas.xml
+++ b/app/src/main/res/layout/gym_guggolas.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Állj egyenes háttal, kis terpeszben, lábaid körülbelül vállszélességben legyenek egymástól.
 \n\n2. A rúd a hát felső részén helyezkedjen el. Guggolj le úgy, hogy a térdeidet oldalra tolod, miközben a csípődet hátra mozgatod.
 \n\n3. Addig engedd le magad, amíg csípőd kicsit lejjebb lesz a térdeidnél.
