--- a/app/src/main/res/layout/gym_leg_labtolas.xml
+++ b/app/src/main/res/layout/gym_leg_labtolas.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Helyezkedj el kényelmesen a lábtoló gépen.
 \n\n2. Kilégzés közben nyújtsd ki a lábaidat, hátad nyomd az üléspárnának.
 \n\n3. Tetején kicsit tartsuk meg, majd belégzés közben térdek hajlításával térj vissza a kiindulás helyzetbe.
