--- a/app/src/main/res/layout/gym_shoulder_eloreemeles.xml
+++ b/app/src/main/res/layout/gym_shoulder_eloreemeles.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Vegyél mindekét kezedbe 1-1 súlyzót. Állj egyenes háttal, kis terpeszben, lábaid körülbelül vállszélességben legyenek egymástól, karjaid lógjanak a tested mellett.
 \n\n2. Belégzés közben emeld fel a súlyzókat. A könyökök legyenek enyhén behajlítva, karok kinyújtva, tenyérrel lefelé nézzenek.
 \n\n3. Tartsd meg rövid ideig.
