--- a/app/src/main/res/layout/gym_shoulder_vallbolnyomas.xml
+++ b/app/src/main/res/layout/gym_shoulder_vallbolnyomas.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Tartsd a súlyzókat a vállak fölött úgy, hogy a tenyered előre néz, a könyököd pedig oldalra legyen és 90°-os szöget zárjanak be.
 \n\n2.Nyomd ki a súlyzókat a fejed fölé.
 \n\n3.Ezután lassan térj vissza a kiindulási helyzetbe.
