--- a/app/src/main/res/layout/gym_triceps_letolaskotellel.xml
+++ b/app/src/main/res/layout/gym_triceps_letolaskotellel.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
             android:text="1. Rögzíts egy tricepsz kötelet a kábel végére. Ennek a mellkas magasságában kell lógnia.
 \n\n2. Állj egyenes háttal, kis terpeszben, lábaid legyenek kissé behajlítva és körülbelül vállszélességben legyenek egymástól.
 \n\n3. Könyökeid és a felkarjaid szorítsd az oldaladhoz. Húzd lefelé a kötelet a tested mellé addig, amíg a karjaid ki nem nyújtódnak.
