--- a/app/src/main/res/layout/activity_workout_chest.xml
+++ b/app/src/main/res/layout/activity_workout_chest.xml
@@ -47,7 +47,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Fekvenyomás"
+                        android:gravity="center"
+                        android:text="Fekvőtámasz"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
 
@@ -81,7 +82,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text=" Fekvenyomás \n    egykezes\n    súlyzókkal"
+                        android:gravity="center"
+                        android:text="Fekvőtámasz\nemelt lábbakkal"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
@@ -114,7 +116,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Fekvenyomás \n    egykezes\n    súlyzókkal\n  ferde padon"
+                        android:gravity="center"
+                        android:text="Széles\nfekvőtámasz"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
@@ -147,40 +150,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="  Tárogatás \n  egykezes\n  súlyzókkal"
-                        android:textColor="@color/white"
-                        android:textSize="18dp" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/chest5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="12dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="6dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="  Tárogatás \n  Pec Deck\n     gépen"
+                        android:gravity="center"
+                        android:text="Tolódzkodás"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
