--- a/app/src/main/res/layout/activity_workout_leg.xml
+++ b/app/src/main/res/layout/activity_workout_leg.xml
@@ -80,7 +80,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Lábtolás"
+                        android:text="Kitörés"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
@@ -113,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Lábnyújtás gépen"
+                        android:text="Oldalra guggolás"
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
@@ -146,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Álló vádligép"
+                        android:text="Álló vádli emelés "
                         android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
