--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -161,7 +161,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="220dp"
                     android:src="@drawable/plan_workout2napos"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="25dp"/>
 
             </LinearLayout>
 
