--- a/app/src/main/res/layout/activity_gym_shoulder.xml
+++ b/app/src/main/res/layout/activity_gym_shoulder.xml
@@ -39,9 +39,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_width="140dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_shoulder_vallbolnyomas"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -73,9 +73,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_width="140dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_shoulder_oldalraemeles"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -107,9 +107,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_width="140dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_shoulder_eloreemeles"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -141,9 +141,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_width="140dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_shoulder_allighuzas"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -175,9 +175,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_width="140dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_shoulder_vallvonogatas"/>
 
                     <TextView
                         android:layout_width="wrap_content"
