--- a/app/src/main/res/layout/activity_gym_biceps.xml
+++ b/app/src/main/res/layout/activity_gym_biceps.xml
@@ -40,8 +40,8 @@
 
                     <ImageView
                         android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_biceps_ketkezes"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -74,8 +74,8 @@
 
                     <ImageView
                         android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_biceps_valtottkezes"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -108,8 +108,8 @@
 
                     <ImageView
                         android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_biceps_kalapacs"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -142,8 +142,8 @@
 
                     <ImageView
                         android:layout_width="135dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:layout_height="110dp"
+                        android:src="@drawable/giff_biceps_koncentralt"/>
 
                     <TextView
                         android:layout_width="wrap_content"
